--- a/Frontend/src/components/MealSelection.css
+++ b/Frontend/src/components/MealSelection.css
@@ -15,4 +15,78 @@
   .react-datepicker__month {
     margin: 1.5em; /* Increase the margin of the month view */
   }
+  .tooltip {
+    position: absolute;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 1000;
+  }
   
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    z-index: 1001;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .booked-date {
+    background-color: green !important;
+    color: white !important;
+  }
+  .custom-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Ensure modal is above other content */
+  }
+  
+  .custom-modal ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .custom-modal button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .custom-modal button:hover {
+    background-color: #0056b3;
+  }
+
+  .close-icon {
+    position: relative;
+    margin: auto;
+    font-size: 40px;
+    cursor: pointer;
+    color: #555;
+  }
